--- a/scripts/plotting.ipynb
+++ b/scripts/plotting.ipynb
@@ -1555,8 +1555,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 6), dpi=200)\n",
-    "sns.set(style=\"whitegrid\")\n",
+    " sns.set(style=\"whitegrid\")\n",
     "g = sns.lineplot(data=df, x=\"time_limit\", y=\"max_global_samples\", \n",
     "                 hue=\"num_lambdas-num_samples\", \n",
     "#                  style=\"algorithm\", \n",
@@ -3120,6 +3119,7 @@
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "f19d74a2-1b59-4ed3-8260-ca4585702c22"
     }
@@ -3385,6 +3385,7 @@
    "cell_type": "code",
    "execution_count": 160,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
